<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_uri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="" android:text="@string/edit_uri"/>

    <Button
        android:id="@+id/button_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/button_web"
        android:onClick="openWebsite"/>

    <EditText
        android:id="@+id/edit_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="" android:text="@string/edit_location"/>

    <Button
        android:id="@+id/button_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/button_map"
        android:onClick="openLocation"/>

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="" android:text="@string/edit_text_share"/>

    <Button
        android:id="@+id/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/button_text"
        android:onClick="shareText"/>
</LinearLayout>